--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Show spacefic post</h1>
+  content: <%= @post.text %><br>
+  comments <%= @post.comment_counter %><br>
+  likes <%= @post.likes_counter %><br>  
+
+<% @comments.each do |comment| %>
+    Text: <%= comment.text %><br>
+<% end %>
