make sure comments appear

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,4 +2,10 @@
 <% @posts.each do |post| %>
   Title: <%= post.title %><br>
   Auther id: <%= post.user_id %><br>
+        <% post.comments.each do |comment| %>
+        <div class="comment-wrapper">
+            User Name:    <%= User.find_by(id:comment.user_id).name %> <br>
+            Comment:   <%= comment.text %>
+        </div>
+      <% end %>
 <% end %>
