--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
   comments <%= @post.comment_counter %><br>
   likes <%= @post.likes_counter %><br>  
 
-<% @post.comments.each do |comment| %>
+<% @comments.each do |comment| %>
 <div class="comment-wrapper">
   User Name:    <%= User.find_by(id:comment.user_id).name %> <br>
   Comment:   <%= comment.text %>
