Creates a Post on behalf of the current_user

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Names of all the people</h1>
 <% @posts.each do |post| %>
   Title: <%= post.title %><br>
-  Auther id: <%= post.user_id %><br>
+  Content  <%= post.text %><br>
+
         <% post.comments.each do |comment| %>
         <div class="comment-wrapper">
             User Name:    <%= User.find_by(id:comment.user_id).name %> <br>
