Fix n+1 problem for posts#index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,23 @@
-<h1>Names of all the people</h1>
-<% @posts.each do |post| %>
-  Title: <%= post.title %><br>
-  Content  <%= post.text %><br>
-
-        <% post.comments.each do |comment| %>
-        <div class="comment-wrapper">
-            User Name:    <%= User.find_by(id:comment.user_id).name %> <br>
-            Comment:   <%= comment.text %>
-        </div>
-      <% end %>
+<h1>Names of all the posts</h1>
+<div>
+    <div>
+      <img src = <%=@user.photo %> >
+    </div>
+    <div>
+      <h1><%= @user.name %></h1>
+      <span><%= @user.posts_counter %> </span>
+    </div>
+</div>
+<% @user.posts.each do |post|  %>
+<div>
+   <h2><%= post.title  %></h2>
+    <h4><%= post.text  %> </h4>
+    Likes couter: <%= post.likes_counter  %><br/>
+    Comments counter <%= post.comment_counter  %>
+    <% post.comments.each do |comment| %>
+      <div> 
+         <%= comment.user.name %>  :  <%= comment.text %>
+      </div> 
+    <% end %>
+  </div>
 <% end %>
