--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,8 @@
 </div>
 <% @user.posts.each do |post|  %>
 <div>
-   <h2><%= post.title  %></h2>
+  <h2><a href= "<%=user_post_path(@user.id,post.id)%>"> <%= post.title %></a></h2> 
+  <br/>
     <h4><%= post.text  %> </h4>
     Likes couter: <%= post.likes_counter  %><br/>
     Comments counter <%= post.comment_counter  %>
