--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Show spacefic post</h1>
+  <h2><%= @user.name %></h2>
+  title: <%= @post.title %><br/>
   content: <%= @post.text %><br>
   comments <%= @post.comment_counter %><br>
   likes <%= @post.likes_counter %><br>  
