--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,19 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+  
+  
+    <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+        <div class="field">
+    <%= f.label :bio %><br />
+    <%= f.text_field :bio %>
+        <div class="field">
+    <%= f.label :photo %><br />
+    <%= f.text_field :photo %>
+  </div>
+  
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
