--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,9 @@
       Posts Counter: <span><%= @user.posts_counter %> </span>
     </div>
 </div>
+  <h2><%= link_to "Add New Post", new_user_post_path(@user.id) %></h2>
+  <hr>
+
 <% @user.posts.each do |post|  %>
 <div>
   <h2><a href= "<%=user_post_path(@user.id,post.id)%>"> <%= post.title %></a></h2> 
@@ -15,6 +18,7 @@
     <h4><%= post.text  %> </h4>
     Likes couter: <%= post.likes_counter  %><br/>
     Comments counter <%= post.comment_counter  %>
+      <%=button_to 'Delete', {:controller => :posts, :action => 'destroy', :id => post.id}, :method => :delete %> 
     <% post.comments.each do |comment| %>
       <div> 
          <%= comment.user.name %>  :  <%= comment.text %>
