--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,17 +8,24 @@
       Posts Counter: <span><%= @user.posts_counter %> </span>
     </div>
 </div>
+  <% if @user.id == current_user.id %>
   <h2><%= link_to "Add New Post", new_user_post_path(@user.id) %></h2>
+  
+  <% end %>
+  
   <hr>
 
-<% @user.posts.each do |post|  %>
+<% @posts.each do |post|  %>
 <div>
   <h2><a href= "<%=user_post_path(@user.id,post.id)%>"> <%= post.title %></a></h2> 
   <br/>
     <h4><%= post.text  %> </h4>
     Likes couter: <%= post.likes_counter  %><br/>
     Comments counter <%= post.comment_counter  %>
+  <% if can? :manage, post %>
       <%=button_to 'Delete', {:controller => :posts, :action => 'destroy', :id => post.id}, :method => :delete %> 
+      <% end %>
+      
     <% post.comments.each do |comment| %>
       <div> 
          <%= comment.user.name %>  :  <%= comment.text %>
