--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,3 +12,4 @@
   <br>
 </div>
 <% end %>
+  <button><a href= "<%=new_user_post_comment_path(current_user.id,@post.id)%>">Add Comment</a></button>
