--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
   likes <%= post.likes_counter %><br>
   
   <% if can? :manage, post %>
-      <%=button_to 'Delete', user_post_path(@user.id,post.id), :method => :delete %>
+      <%=button_to 'Delete Post', user_post_path(@user.id,post.id), :method => :delete %>
   <% end %>
   
   <br/>
