Add remove comment functionality and its authorization

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,6 +29,9 @@
     <% post.comments.each do |comment| %>
       <div> 
          <%= comment.user.name %>  :  <%= comment.text %>
+            <% if can? :manage, comment %>
+              <%= button_to "Delete Comment", user_post_comment_path(user_id: @user.id, post_id: post.id, id: comment.id) , method: :delete %>
+          <% end %>
       </div> 
     <% end %>
         <button><a href= "<%=new_user_post_comment_path(current_user.id,post.id)%>">Add Comment</a></button>
