--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,11 @@
 <div class="comment-wrapper">
   User Name:    <%= comment.user.name %> <br>
   Comment:   <%= comment.text %>
+                     <% if can? :manage, comment %>
+            <%= button_to "Delete Comment", user_post_comment_path(user_id: @user.id, post_id: @post.id, id: comment.id) , method: :delete %>
+            
+            <% end %>
+            
   <br>
 </div>
 <% end %>
