--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,22 +3,23 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+    <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+        </div>
+        <div class="field">
+    <%= f.label :bio %><br />
+    <%= f.text_field :bio %>
+        </div>
+  <div class="field">
+    <%= f.file_field :image %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-  
-    <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-        <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_field :bio %>
-        <div class="field">
-    <%= f.label :photo %><br />
-    <%= f.text_field :photo %>
-  </div>
-  
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
