--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Here is a list of all users</h1>
+<h1>Here is a list of all our users</h1>
 <% @users.each do |user| %>
-  image: <%= user.photo %><br>
+  <img src="<%= url_for(user.image) %>" width ="200px" height = "200px" alt="">
   name: <a href= "<%=user_path(user.id)%>"> <%= user.name %></a> <br/>
   posts <%= user.posts_counter %><br>
   <%# <%= link_to "See User Profile", user_path(user.id)%>
