--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <h2>Here is the Profile for a given user</h2>
-  img: <%= @user.photo %><br>
   name: <%= @user.name %><br>
+  
+  <% if @user.image.attached? %>
+    <img src="<%= url_for(@user.image) %>" width ="200px" height = "200px"  alt="">
+  <% end %>
+  
   posts <%= @user.posts_counter %><br>
   bio <%= @user.bio %><br>
 <hr>
