--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,12 +36,14 @@
         <%= f.text_area :bio, class:"form-control"%>
     </div>
 
-
-
-    <div class="form-group">  
-      <%= f.file_field :image, class:"form-control-file" %>
-    </div>
-
+<div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text">Upload Your Image</span>
+  </div>
+  <div class="custom-file">
+      <%= f.file_field :image, class:"custom-file-input" %>
+  </div>
+</div>
 
     <div class="actions">
       <%= f.submit "Sign up", class:"btn btn-outline-primary" %>
