--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,44 @@
-<h2>Here is the Profile for a given user</h2>
-  name: <%= @user.name %><br>
+<div class="d-grid gap-2 col-3 mx-auto">
+  <p class="btn btn-outline-primary shadow" align="center"><%= link_to "Back to Users", '/users' %></p>
+</div>
+<div>
+  <div class="d-flex">
+    <div class="border col-2">
+        <% if @user.image.attached? %>
+          <img src="<%= url_for(@user.image) %>" width ="200px" height = "200px"  alt="">
+        <% end %>
+      </div>
+    <div class="border col-9">
+      <h2><%= @user.name %> </h2>
+      <p align="right">Number of posts: <%= @user.posts_counter %></p>
+    </div>
+  </div>
+  <div class="border col-11">
+    <p>Bio</p>
+    <p><%= @user.bio %></p>
+  </div>
+  <hr/>
+  <h2>Recent Posts</h2>
   
-  <% if @user.image.attached? %>
-    <img src="<%= url_for(@user.image) %>" width ="200px" height = "200px"  alt="">
+  <% @posts.each do |post| %>
+    <div class="border col-11">
+      <p><a href= "<%=user_post_path(@user.id,post.id)%>"> <%= post.title %></a><%=  %></p>
+      <p><%= post.text %></p>
+      <p align="right">Comments: <%= post.comment_counter || 0 %>, Likes: <%= post.likes_counter || 0 %></p>
+    </div>
   <% end %>
-  
-  posts <%= @user.posts_counter %><br>
-  bio <%= @user.bio %><br>
-<hr>
-  <% if @user.id == current_user.id %>
+</div>
+<div class="d-grid gap-2 col-3 mx-auto">
+<% if @user.id == current_user.id %>
+<p class="btn btn-outline-primary shadow" align="center">
   <%= link_to "new Post", new_user_post_path(@user.id) %>
-  <% end %>
-  
-<% @posts.each do |post| %>
-  <h2><a href= "<%=user_post_path(@user.id,post.id)%>"> <%= post.title %></a></h2>  <br/>
-
-  content: <%= post.text %><br>
-  comments <%= post.comment_counter %><br>
-  likes <%= post.likes_counter %><br>
-  
-  <% if can? :manage, post %>
-      <%=button_to 'Delete Post', user_post_path(@user.id,post.id), :method => :delete %>
-  <% end %>
-  
-  <br/>
+</p>
 <% end %>
-  <%# <%= link_to "See User Posts", user_posts_path(@user.id) %>
-  <a href="<%=user_posts_path(@user.id)%>"><button>See All Posts</button></a>
+</div>
 
+  <%# <%= link_to "See User Posts", user_posts_path(@user.id) %>
+<div class="d-grid gap-2 col-3 mx-auto">
+  <p class="btn btn-outline-primary shadow" align="center"><%= link_to "See all posts", user_posts_path(user_id: params[:id]) %></p>
+</div>
 
 
